--- a/netology-pod-svc.yaml
+++ b/netology-pod-svc.yaml
@@ -2,12 +2,15 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: netology-web
+  labels:
+    app.kubernetes.io/name: netology-web
 spec:
   containers:
   - name: netology-web
     image: gcr.io/kubernetes-e2e-test-images/echoserver:2.2
     ports:
     - containerPort: 8080
+      name: http-web-svc
 ---
 apiVersion: v1
 kind: Service
@@ -19,4 +22,4 @@ spec:
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 8080
+      targetPort: http-web-svc
