--- a/depl.yaml
+++ b/depl.yaml
@@ -18,6 +18,8 @@ spec:
       - name: nginx
         image: nginx
         ports:
-        - containerPort: 80
+        - containerPort: 8080
       - name: multitool
         image: wbitt/network-multitool
+        ports:
+        - containerPort: 80,443
