--- a/depl.yaml
+++ b/depl.yaml
@@ -19,13 +19,40 @@ spec:
         image: nginx
         ports:
         - containerPort: 80
+          name: http-web-svc
       - name: multitool
         image: wbitt/network-multitool
         ports:
         - containerPort: 8080
+          name: multitool-8080
         - containerPort: 8443
+          name: multitool-8443
         env:
           - name: HTTP_PORT
             value: "8080"
           - name: HTTPS_PORT
             value: "8443"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx-service
+spec:
+  selector:
+    app.kubernetes.io/name: nginx
+  ports:
+  - name: http-nginx-port
+    protocol: TCP
+    port: 80
+    targetPort: http-web-svc
+  selector:
+    app.kubernetes.io/name: multitool
+  ports:
+    - name: http-multitool-port
+      protocol: TCP
+      port: 1080
+      targetPort: 8080
+    - name: https-multitool-port
+      protocol: TCP
+      port: 1443
+      targetPort: 8443
