--- a/depl.yaml
+++ b/depl.yaml
@@ -39,20 +39,20 @@ metadata:
   name: nginx-service
 spec:
   selector:
-    - app.kubernetes.io/name: nginx
+    app.kubernetes.io/name: nginx
     ports:
     - name: http-nginx-port
       protocol: TCP
       port: 2080
       targetPort: http-web-svc
 
-    - app.kubernetes.io/name: multitool
-    ports:
-      - name: http-multitool-port
-        protocol: TCP
-        port: 1080
-        targetPort: multitool-8080
-      - name: https-multitool-port
-        protocol: TCP
-        port: 1443
-        targetPort: multitool-8443
+#    app.kubernetes.io/name: multitool
+#    ports:
+#    - name: http-multitool-port
+#      protocol: TCP
+#      port: 1080
+#      targetPort: multitool-8080
+#    - name: https-multitool-port
+#      protocol: TCP
+#      port: 1443
+#      targetPort: multitool-8443
