--- a/depl.yaml
+++ b/depl.yaml
@@ -3,16 +3,16 @@ kind: Deployment
 metadata:
   name: my-deployment
   labels:
-    app: nginx
+    app: nginx-multitool
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: nginx
+      app: nginx-multitool
   template:
     metadata:
       labels:
-        app: nginx
+        app: nginx-multitool
     spec:
       containers:
       - name: nginx
@@ -36,22 +36,20 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-service
+  name: nginx-multitool-service
 spec:
   selector:
-    app.kubernetes.io/name: nginx
+    app.kubernetes.io/name: nginx-multitool
   ports:
     - name: http-nginx-port
       protocol: TCP
       port: 2080
       targetPort: http-web-svc
-#    - app.kubernetes.io/name: multitool
-#    ports:
-#      - name: http-multitool-port
-#        protocol: TCP
-#        port: 1080
-#        targetPort: multitool-8080
-#      - name: https-multitool-port
-#        protocol: TCP
-#        port: 1443
-#        targetPort: multitool-8443
+    - name: http-multitool-port
+      protocol: TCP
+      port: 1080
+      targetPort: multitool-8080
+    - name: https-multitool-port
+      protocol: TCP
+      port: 1443
+      targetPort: multitool-8443
