--- a/depl.yaml
+++ b/depl.yaml
@@ -53,3 +53,25 @@ spec:
       protocol: TCP
       port: 1443
       targetPort: multitool-8443
+
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: multitool-separate
+  labels:
+    app.kubernetes.io/name: multitool-separate
+spec:
+  containers:
+  - name: multitool-separate
+    image: wbitt/network-multitool
+    ports:
+      - containerPort: 8080
+        name: multitool-sep-8080
+      - containerPort: 8443
+        name: multitool-sep-8443
+      env:
+        - name: HTTP_PORT
+          value: "8080"
+        - name: HTTPS_PORT
+          value: "8443"
