--- a/depl.yaml
+++ b/depl.yaml
@@ -67,9 +67,9 @@ spec:
     image: wbitt/network-multitool
     ports:
       - containerPort: 8080
-        name: multitool-sep-8080
+        name: mt-sep-8080
       - containerPort: 8443
-        name: multitool-sep-8443
+        name: mt-sep-8443
 #      env:
 #        - name: HTTP_PORT
 #          value: "8080"
