--- a/depl.yaml
+++ b/depl.yaml
@@ -39,7 +39,7 @@ metadata:
   name: nginx-multitool-service
 spec:
   selector:
-    app.kubernetes.io/name: nginx
+    app.kubernetes.io/name: nginx-multitool
   ports:
     - name: http-nginx-port
       protocol: TCP
