--- a/depl.yaml
+++ b/depl.yaml
@@ -12,7 +12,7 @@ spec:
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: nginx-multitool
+        name: nginx-multitool
     spec:
       containers:
       - name: nginx
