--- a/depl.yaml
+++ b/depl.yaml
@@ -8,7 +8,7 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: nginx
+      app.kubernetes.io/name: nginx-multitool
   template:
     metadata:
       labels:
