--- a/node.yaml
+++ b/node.yaml
@@ -7,9 +7,11 @@ spec:
   selector:
     app.kubernetes.io/name: nginx-multitool
   ports:
-    - port: 9001
+    - name: node-tcp-nginx
+      port: 9001
       targetPort: 9001
       nodePort: 30007
-    - port: 9002
+    - name: node-tcp-mt
+      port: 9002
       targetPort: 9002
       nodePort: 30008
