--- a/ingress.yaml
+++ b/ingress.yaml
@@ -10,14 +10,14 @@ spec:
   - http:
       paths:
       - path: /
-#        pathType: Prefix
+        pathType: Prefix
         backend:
           service:
             name: nginx-path
             port:
               number: 9001
       - path: /api
-#        pathType: Prefix
+        pathType: Prefix
         backend:
           service:
             name: mt-path
