--- a/ingress.yaml
+++ b/ingress.yaml
@@ -10,14 +10,14 @@ spec:
   - http:
       paths:
       - path: /
-        pathType: Prefix
+        pathType: Exact
         backend:
           service:
             name: nginx-multitool-service
             port:
               number: 9001
       - path: /api
-        pathType: Prefix
+        pathType: Exact
         backend:
           service:
             name: nginx-multitool-service
