--- a/depl3.yaml
+++ b/depl3.yaml
@@ -3,16 +3,16 @@ kind: Deployment
 metadata:
   name: frontend
   labels:
-    app.kubernetes.io/name: nginx-multitool
+    app.kubernetes.io/name: nginx
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app.kubernetes.io/name: nginx-multitool
+      app.kubernetes.io/name: nginx
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: nginx-multitool
+        app.kubernetes.io/name: nginx
     spec:
       containers:
       - name: nginx
@@ -27,16 +27,16 @@ kind: Deployment
 metadata:
   name: backend
   labels:
-    app.kubernetes.io/name: nginx-multitool
+    app.kubernetes.io/name: multitool
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: nginx-multitool
+      app.kubernetes.io/name: multitool
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: nginx-multitool
+        app.kubernetes.io/name: multitool
     spec:
       containers:
       - name: multitool
@@ -52,15 +52,25 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-multitool-service
+  name: nginx-service
 spec:
   selector:
-    app.kubernetes.io/name: nginx-multitool
+    app.kubernetes.io/name: nginx
   ports:
     - name: http-nginx-port
       protocol: TCP
       port: 9001
       targetPort: http-web-svc
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: multitool-service
+spec:
+  selector:
+    app.kubernetes.io/name: multitool
+  ports:
     - name: http-multitool-port
       protocol: TCP
       port: 9002
