--- a/depl3.yaml
+++ b/depl3.yaml
@@ -75,3 +75,30 @@ spec:
       protocol: TCP
       port: 9002
       targetPort: multitool-8080
+
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: nginx-mt-ingress
+#  annotations:
+#    nginx.ingress.kubernetes.io/rewrite-target: /
+spec:
+#  ingressClassName: nginx-example
+  rules:
+  - http:
+      paths:
+      - path: /
+        pathType: Exact
+        backend:
+          service:
+            name: nginx-service
+            port:
+              number: 9001
+      - path: /api
+        pathType: Exact
+        backend:
+          service:
+            name: multitool-service
+            port:
+              number: 9002
