--- a/depl3.yaml
+++ b/depl3.yaml
@@ -81,10 +81,10 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: nginx-mt-ingress
-#  annotations:
-#    nginx.ingress.kubernetes.io/rewrite-target: /
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
-#  ingressClassName: nginx-example
+  ingressClassName: nginx-example
   rules:
   - http:
       paths:
