--- a/depl-cm.yaml
+++ b/depl-cm.yaml
@@ -56,3 +56,22 @@ spec:
       protocol: TCP
       port: 9002
       targetPort: multitool-8080
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: my-node-service
+spec:
+  type: NodePort
+  selector:
+    app.kubernetes.io/name: nginx-multitool
+  ports:
+    - name: node-tcp-nginx
+      port: 9001
+      targetPort: http-web-svc
+      nodePort: 30007
+    - name: node-tcp-mt
+      port: 9002
+      targetPort: multitool-8080
+      nodePort: 30008
