--- a/depl-sec.yaml
+++ b/depl-sec.yaml
@@ -68,7 +68,10 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: nginx-mt-ingress
+#  annotations:
+#    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
+#  ingressClassName: nginx-example
   rules:
   - http:
       paths:
