--- a/depl-sec.yaml
+++ b/depl-sec.yaml
@@ -73,7 +73,8 @@ metadata:
 spec:
 #  ingressClassName: nginx-example
   rules:
-  - http:
+  - host: qqq.local
+    http:
       paths:
       - path: /
         pathType: Exact
