--- a/depl-sec.yaml
+++ b/depl-sec.yaml
@@ -13,7 +13,7 @@ kind: ConfigMap
 metadata:
   name: cfgmap-site
 data:
-  site:  |
+  index.html:  |
     <html>
     It's working!
     </html>
@@ -41,13 +41,14 @@ spec:
         ports:
         - containerPort: 80
           name: http-web-svc
-#        volumeMounts:
-#        - name: cfgm-vol
-#          mountPath: /usr/share/nginx/html/index.html
-#      volumes:
-#      - name: cfgm-vol
-#        configMap:
-#          name: cfgmap-site
+        volumeMounts:
+        - name: cfgm-vol
+          mountPath: /usr/share/nginx/html/index.html
+          subPath: index.html
+      volumes:
+      - name: cfgm-vol
+        configMap:
+          name: cfgmap-site
 
 ---
 apiVersion: v1
