--- a/rbac.yaml
+++ b/rbac.yaml
@@ -21,7 +21,7 @@ subjects:
   apiGroup: rbac.authorization.k8s.io
 roleRef:
   kind: Role
-  name: pod-reader
+  name: pod-log-describe
   apiGroup: rbac.authorization.k8s.io
 
 ---
