--- a/net-clokub.yaml
+++ b/net-clokub.yaml
@@ -94,6 +94,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: multitool-service-frontend
+  namespace: app
 spec:
   selector:
     app.kubernetes.io/name: multitool-frontend
@@ -108,6 +109,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: multitool-service-backend
+  namespace: app
 spec:
   selector:
     app.kubernetes.io/name: multitool-backend
@@ -122,6 +124,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: multitool-service-cache
+  namespace: app
 spec:
   selector:
     app.kubernetes.io/name: multitool-cache
