--- a/net-clokub.yaml
+++ b/net-clokub.yaml
@@ -133,3 +133,15 @@ spec:
       protocol: TCP
       port: 9003
       targetPort: multitool-8083
+
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: untitled-policy
+  namespace: app
+spec:
+  podSelector: {}
+  policyTypes:
+    - Ingress
+  ingress: []
