--- a/net-clokub.yaml
+++ b/net-clokub.yaml
@@ -138,10 +138,18 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: untitled-policy
+  name: backend-to-cache
   namespace: app
 spec:
-  podSelector: {}
+  podSelector:
+    matchLabels:
+      app: cache
   policyTypes:
     - Ingress
-  ingress: []
+  ingress:
+    - from:
+        - podSelector:
+            matchLabels:
+              app: backend
+      ports:
+        - port: 9003
