--- a/net-clokub.yaml
+++ b/net-clokub.yaml
@@ -94,7 +94,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: multitool-service-frontend
-  namespace: app
+#  namespace: app
 spec:
   selector:
     app.kubernetes.io/name: multitool-frontend
@@ -109,7 +109,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: multitool-service-backend
-  namespace: app
+#  namespace: app
 spec:
   selector:
     app.kubernetes.io/name: multitool-backend
@@ -124,7 +124,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: multitool-service-cache
-  namespace: app
+#  namespace: app
 spec:
   selector:
     app.kubernetes.io/name: multitool-cache
