--- a/net-clokub.yaml
+++ b/net-clokub.yaml
@@ -124,7 +124,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: multitool-service-cache
-#  namespace: app
+  namespace: app
 spec:
   selector:
     app.kubernetes.io/name: multitool-cache
@@ -146,13 +146,13 @@ spec:
       app: backend
   policyTypes:
     - Ingress
-  ingress:
-    - from:
-        - podSelector:
-            matchLabels:
-              app: frontend
-      ports:
-        - port: 9002
+#  ingress:
+#    - from:
+#        - podSelector:
+#            matchLabels:
+#              app: frontend
+#      ports:
+#        - port: 9002
 
 ---
 apiVersion: networking.k8s.io/v1
@@ -166,10 +166,10 @@ spec:
       app: cache
   policyTypes:
     - Ingress
-  ingress:
-    - from:
-        - podSelector:
-            matchLabels:
-              app: backend
-      ports:
-        - port: 9003
+#  ingress:
+#    - from:
+#        - podSelector:
+#            matchLabels:
+#              app: backend
+#      ports:
+#        - port: 9003
