--- a/net-clokub.yaml
+++ b/net-clokub.yaml
@@ -146,13 +146,13 @@ spec:
       app: backend
   policyTypes:
     - Ingress
-#  ingress:
-#    - from:
-#        - podSelector:
-#            matchLabels:
-#              app: frontend
-#      ports:
-#        - port: 9002
+  ingress:
+    - from:
+        - podSelector:
+            matchLabels:
+              app: frontend
+      ports:
+        - port: 9002
 
 ---
 apiVersion: networking.k8s.io/v1
@@ -166,10 +166,21 @@ spec:
       app: cache
   policyTypes:
     - Ingress
-#  ingress:
-#    - from:
-#        - podSelector:
-#            matchLabels:
-#              app: backend
-#      ports:
-#        - port: 9003
+  ingress:
+    - from:
+        - podSelector:
+            matchLabels:
+              app: backend
+      ports:
+        - port: 9003
+
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: default-deny-all
+  namespace: app
+spec:
+  podSelector: {}
+  policyTypes:
+    - Ingress
