--- a/net-clokub.yaml
+++ b/net-clokub.yaml
@@ -143,7 +143,7 @@ metadata:
 spec:
   podSelector:
     matchLabels:
-      app: backend
+      app: multitool-backend
   policyTypes:
     - Ingress
   ingress:
@@ -163,7 +163,7 @@ metadata:
 spec:
   podSelector:
     matchLabels:
-      app: cache
+      app: multitool-cache
   policyTypes:
     - Ingress
   ingress:
