--- a/net-clokub.yaml
+++ b/net-clokub.yaml
@@ -12,16 +12,16 @@ metadata:
   name: frontend
   namespace: app
   labels:
-    app.kubernetes.io/name: multitool-frontend
+    app.kubernetes.io/name: frontend
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: multitool-frontend
+      app.kubernetes.io/name: frontend
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: multitool-frontend
+        app.kubernetes.io/name: frontend
     spec:
       containers:
       - name: multitool
@@ -40,16 +40,16 @@ metadata:
   name: backend
   namespace: app
   labels:
-    app.kubernetes.io/name: multitool-backend
+    app.kubernetes.io/name: backend
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: multitool-backend
+      app.kubernetes.io/name: backend
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: multitool-backend
+        app.kubernetes.io/name: backend
     spec:
       containers:
       - name: multitool
@@ -68,16 +68,16 @@ metadata:
   name: cache
   namespace: app
   labels:
-    app.kubernetes.io/name: multitool-cache
+    app.kubernetes.io/name: cache
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: multitool-cache
+      app.kubernetes.io/name: cache
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: multitool-cache
+        app.kubernetes.io/name: cache
     spec:
       containers:
       - name: multitool
@@ -97,7 +97,7 @@ metadata:
   namespace: app
 spec:
   selector:
-    app.kubernetes.io/name: multitool-frontend
+    app.kubernetes.io/name: frontend
   ports:
     - name: http-multitool-port-frontend
       protocol: TCP
@@ -112,7 +112,7 @@ metadata:
   namespace: app
 spec:
   selector:
-    app.kubernetes.io/name: multitool-backend
+    app.kubernetes.io/name: backend
   ports:
     - name: http-multitool-port-backend
       protocol: TCP
@@ -127,7 +127,7 @@ metadata:
   namespace: app
 spec:
   selector:
-    app.kubernetes.io/name: multitool-cache
+    app.kubernetes.io/name: cache
   ports:
     - name: http-multitool-port-cache
       protocol: TCP
@@ -143,14 +143,14 @@ metadata:
 spec:
   podSelector:
     matchLabels:
-      app: multitool-backend
+      app: backend
   policyTypes:
     - Ingress
   ingress:
     - from:
         - podSelector:
             matchLabels:
-              app: multitool-frontend
+              app: frontend
       ports:
         - port: 9002
 
@@ -163,14 +163,14 @@ metadata:
 spec:
   podSelector:
     matchLabels:
-      app: multitool-cache
+      app: cache
   policyTypes:
     - Ingress
   ingress:
     - from:
         - podSelector:
             matchLabels:
-              app: multitool-backend
+              app: backend
       ports:
         - port: 9003
 
