--- a/net-clokub.yaml
+++ b/net-clokub.yaml
@@ -93,7 +93,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: multitool-service-frontend
+  name: frontend
   namespace: app
 spec:
   selector:
@@ -108,7 +108,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: multitool-service-backend
+  name: backend
   namespace: app
 spec:
   selector:
@@ -123,7 +123,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: multitool-service-cache
+  name: cache
   namespace: app
 spec:
   selector:
