--- a/net-clokub.yaml
+++ b/net-clokub.yaml
@@ -175,12 +175,12 @@ spec:
         - port: 9003
 
 ---
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-  name: default-deny-all
-  namespace: app
-spec:
-  podSelector: {}
-  policyTypes:
-    - Ingress
+#apiVersion: networking.k8s.io/v1
+#kind: NetworkPolicy
+#metadata:
+#  name: default-deny-all
+#  namespace: app
+#spec:
+#  podSelector: {}
+#  policyTypes:
+#    - Ingress
