--- a/net-clokub.yaml
+++ b/net-clokub.yaml
@@ -12,16 +12,16 @@ metadata:
   name: frontend
   namespace: app
   labels:
-    app.kubernetes.io/name: frontend
+    app.kubernetes.io/name: multitool-frontend
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: frontend
+      app.kubernetes.io/name: multitool-frontend
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: frontend
+        app.kubernetes.io/name: multitool-frontend
     spec:
       containers:
       - name: multitool
@@ -40,16 +40,16 @@ metadata:
   name: backend
   namespace: app
   labels:
-    app.kubernetes.io/name: backend
+    app.kubernetes.io/name: multitool-backend
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: backend
+      app.kubernetes.io/name: multitool-backend
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: backend
+        app.kubernetes.io/name: multitool-backend
     spec:
       containers:
       - name: multitool
@@ -68,16 +68,16 @@ metadata:
   name: cache
   namespace: app
   labels:
-    app.kubernetes.io/name: cache
+    app.kubernetes.io/name: multitool-cache
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: cache
+      app.kubernetes.io/name: multitool-cache
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: cache
+        app.kubernetes.io/name: multitool-cache
     spec:
       containers:
       - name: multitool
@@ -93,11 +93,11 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: frontend
+  name: multitool-service-frontend
   namespace: app
 spec:
   selector:
-    app.kubernetes.io/name: frontend
+    app.kubernetes.io/name: multitool-frontend
   ports:
     - name: http-multitool-port-frontend
       protocol: TCP
@@ -108,11 +108,11 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: backend
+  name: multitool-service-backend
   namespace: app
 spec:
   selector:
-    app.kubernetes.io/name: backend
+    app.kubernetes.io/name: multitool-backend
   ports:
     - name: http-multitool-port-backend
       protocol: TCP
@@ -123,11 +123,11 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: cache
+  name: multitool-service-cache
   namespace: app
 spec:
   selector:
-    app.kubernetes.io/name: cache
+    app.kubernetes.io/name: multitool-cache
   ports:
     - name: http-multitool-port-cache
       protocol: TCP
@@ -143,14 +143,14 @@ metadata:
 spec:
   podSelector:
     matchLabels:
-      app.kubernetes.io/name: backend
+      app.kubernetes.io/name: multitool-backend
   policyTypes:
     - Ingress
   ingress:
     - from:
         - podSelector:
             matchLabels:
-              app.kubernetes.io/name: frontend
+              app.kubernetes.io/name: multitool-frontend
       ports:
         - port: 9002
 
@@ -163,14 +163,14 @@ metadata:
 spec:
   podSelector:
     matchLabels:
-      app.kubernetes.io/name: cache
+      app.kubernetes.io/name: multitool-cache
   policyTypes:
     - Ingress
   ingress:
     - from:
         - podSelector:
             matchLabels:
-              app.kubernetes.io/name: backend
+              app.kubernetes.io/name: multitool-backend
       ports:
         - port: 9003
 
