--- a/net-clokub.yaml
+++ b/net-clokub.yaml
@@ -134,53 +134,14 @@ spec:
       port: 9003
       targetPort: multitool-8083
 
----
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-  name: frontend-backend
-  namespace: app
-spec:
-  podSelector:
-    matchLabels:
-      app.kubernetes.io/name: multitool-backend
-  policyTypes:
-    - Ingress
-  ingress:
-    - from:
-        - podSelector:
-            matchLabels:
-              app.kubernetes.io/name: multitool-frontend
-      ports:
-        - port: 9002
-
----
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-  name: backend-to-cache
-  namespace: app
-spec:
-  podSelector:
-    matchLabels:
-      app.kubernetes.io/name: multitool-cache
-  policyTypes:
-    - Ingress
-  ingress:
-    - from:
-        - podSelector:
-            matchLabels:
-              app.kubernetes.io/name: multitool-backend
-      ports:
-        - port: 9003
-
----
+#---
 #apiVersion: networking.k8s.io/v1
 #kind: NetworkPolicy
 #metadata:
-#  name: default-deny-all
+#  name: untitled-policy
 #  namespace: app
 #spec:
 #  podSelector: {}
 #  policyTypes:
 #    - Ingress
+#  ingress: []
