--- a/net-clokub.yaml
+++ b/net-clokub.yaml
@@ -164,3 +164,23 @@ spec:
               app.kubernetes.io/name: multitool-backend
       ports:
         - port: 8083
+
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: frontend-to-backend
+  namespace: app
+spec:
+  podSelector:
+    matchLabels:
+      app.kubernetes.io/name: multitool-backend
+  policyTypes:
+    - Ingress
+  ingress:
+    - from:
+        - podSelector:
+            matchLabels:
+              app.kubernetes.io/name: multitool-frontend
+      ports:
+        - port: 8082
