--- a/tr.yaml
+++ b/tr.yaml
@@ -65,6 +65,8 @@ metadata:
   name: auth-db
   namespace: data
 spec:
+#  selector:
+#    app.kubernetes.io/name: multitool-cache
   ports:
   - port: 80
     protocol: TCP
