--- a/tr.yaml
+++ b/tr.yaml
@@ -65,8 +65,8 @@ metadata:
   name: auth-db
   namespace: data
 spec:
-#  selector:
-#    app.kubernetes.io/name: multitool-cache
+  selector:
+    app.kubernetes.io/name: auth-db
   ports:
   - port: 80
     protocol: TCP
