--- a/tr.yaml
+++ b/tr.yaml
@@ -63,10 +63,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: auth-db
-  namespace: data
+#  namespace: data
 spec:
-#  selector:
-#    app.kubernetes.io/name: multitool-cache
   ports:
   - port: 80
     protocol: TCP
